feat: update portfolio

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
               </p>
               <p>
                 Fast-forward to today, I am building my own portfolio with a few
-                side projects. Moving on in 2023, I will be going for my
-                <span class="hightlight underline">first internship</span>. Stay
-                tune!
+                side projects. I am looking for an
+                <span class="hightlight underline">AI/ ML related internship</span> starting from <span class="hightlight underline">March 2023</span>. 
+                Please contact me if you find me suitable for related position.
               </p>
               <p>
                 Here are a few technologies I've been working with recently:
@@ -110,6 +110,9 @@
               <li>MySQL</li>
               <li>Scikit-Learn</li>
               <li>Tensorflow</li>
+              <li>Microsoft Azure</li>
+              <li>Tox</li>
+              <li>Pytest</li>
             </ul>
           </div>
           <div class="about__image">
@@ -138,34 +141,10 @@
             </h3>
             <p class="experience__date">Aug 2021 - Oct 2022</p>
             <ul class="experience__about">
+              <li>Implement tox in automation testing using Microsoft Azure with basic knowledge on Continuous Integration (CI)</li>
               <li>
-                Attend Synopsys training on Verilog, Verification using VCS,
-                SystemVerilog, Design Compiler, PrimeTime and IC Compiler.
-              </li>
-            </ul>
-          </div>
-          <div class="experience__card">
-            <h3 class="experience__role">
-              <span>Data Science Intern</span>
-              @
-              <span
-                ><a
-                  class="experience__company underline"
-                  href="https://www.dataglacier.org/"
-                  target="_blank"
-                  >Data Glacier</a
-                ></span
-              >
-            </h3>
-            <p class="experience__date">July 2021 - Sept 2022</p>
-            <ul class="experience__about">
-              <li>
-                Peformed Exploratory Data Analysis (EDA) on Data Science
-                Projects
-              </li>
-              <li>Deployed project using Flask and Heroku</li>
-              <li>
-                Collaborate with 2 team members to deliver Data Science Project
+                Attend training by Synopsys on Verilog, verification using VCS, Systemverilog, Design Compiler, DC Low Power & Formality, 
+                Design for Test (DFT), Static Timing Analysis with PrimeTime and IC Compiler II
               </li>
             </ul>
           </div>
@@ -229,6 +208,55 @@
             </div>
             <div class="project__image">
               <img src="assets/images/fetal-analysis.jpg" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="https://github.com/Michelle-Lohwt/qr_code-bar_code-detector"
+                  target="_blank"
+                >
+                  QR code and Bar code Detector with automation testing
+                </a>
+              </h3>
+              <p class="project__description">
+                The project uses OpenCV to detect qr code and bar code. 
+                For additional experience, the project includes automation testing with pytest and tox.
+              </p>
+              <ul class="project__technologies">
+                <li>Python</li>
+                <li>Numpy</li>
+                <li>OpenCV</li>
+                <li>Pytest</li>
+                <li>Tox</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="https://github.com/Michelle-Lohwt/qr_code-bar_code-detector"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/qr_code.jpg" alt="" />
             </div>
           </div>
           <div class="work__card">
