--- a/index.html
+++ b/index.html
@@ -141,11 +141,20 @@
             </h3>
             <p class="experience__date">Aug 2021 - Oct 2022</p>
             <ul class="experience__about">
-              <li>Implement tox in automation testing using Microsoft Azure with basic knowledge on Continuous Integration (CI)</li>
+              <li>Implement tox in automation testing with basic knowledge on Continuous Integration (CI)</li>
               <li>
                 Attend training by Synopsys on Verilog, verification using VCS, Systemverilog, Design Compiler, DC Low Power & Formality, 
                 Design for Test (DFT), Static Timing Analysis with PrimeTime and IC Compiler II
               </li>
+            </ul>
+            <ul class="project__technologies">
+              <li>Python</li>
+              <li>Pytest</li>
+              <li>Tox</li>
+              <li>Microsoft Azure</li>
+              <li>Powershell Scripting</li>
+              <li>Continuous Integration</li>
+              <li>Scrum</li>
             </ul>
           </div>
         </div>
