feat: add featured project

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
             </h3>
             <p class="experience__date">Aug 2021 - Oct 2022</p>
             <ul class="experience__about">
+              <li>Work under Validation Engineering Test Automation Team</li>
               <li>Implement tox in automation testing with basic knowledge on Continuous Integration (CI)</li>
+              <li>Explore and sharing findouts on several topics including python context-manager, overriding built-in functions, tox and tkinter library during daily scrum</li>
               <li>
                 Attend training by Synopsys on Verilog, verification using VCS, Systemverilog, Design Compiler, DC Low Power & Formality, 
                 Design for Test (DFT), Static Timing Analysis with PrimeTime and IC Compiler II
@@ -217,6 +219,56 @@
             </div>
             <div class="project__image">
               <img src="assets/images/fetal-analysis.jpg" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="https://github.com/Michelle-Lohwt/notion-library-search-engine"
+                  target="_blank"
+                >
+                  Notion Library Search Engine
+                </a>
+              </h3>
+              <p class="project__description">
+                I created my own library using Notion and was planning to make a book recommendation system for myself. 
+                However, I do not have data from other users to do the recommendation system, so I have stopped my project 
+                until search engine using TFID.</a>
+              </p>
+              <ul class="project__technologies">
+                <li>Python</li>
+                <li>Numpy</li>
+                <li>Pandas</li>
+                <li>Notion</li>
+                <li>TFID</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="https://github.com/Michelle-Lohwt/notion-library-search-engine"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/library_tree_notion.png" alt="" />
             </div>
           </div>
           <div class="work__card">
