--- a/index.html
+++ b/index.html
@@ -172,60 +172,6 @@
               <p class="hightlight">Featured Project</p>
               <h3 class="project__title">
                 <a
-                  href="https://express.adobe.com/page/dQsGnkdjU41vL/"
-                  target="_blank"
-                >
-                  Fetal Cardiotocography Prediction Model
-                </a>
-              </h3>
-              <p class="project__description">
-                Facilitate fetal health status medical diagnosis by comparing
-                prediction model using K-Nearest Neighbours (KNN), Support
-                Vector Machine (SVM), Random Forest and Neural Network.
-              </p>
-              <ul class="project__technologies">
-                <li>Python</li>
-                <li>Numpy</li>
-                <li>Pandas</li>
-                <li>Matplotlib</li>
-                <li>Seaborn</li>
-                <li>Mlxtend</li>
-                <li>Keras</li>
-                <li>Scikit-Learn</li>
-                <li>Tensorflow</li>
-              </ul>
-              <div class="project__links">
-                <a
-                  href="https://github.com/Michelle-Lohwt/fetal-cardiotocography-analysis"
-                  target="_blank"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    role="img"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    stroke="currentColor"
-                    stroke-width="2"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <title>GitHub</title>
-                    <path
-                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
-                    ></path>
-                  </svg>
-                </a>
-              </div>
-            </div>
-            <div class="project__image">
-              <img src="assets/images/fetal-analysis.jpg" alt="" />
-            </div>
-          </div>
-          <div class="work__card">
-            <div class="project__container">
-              <p class="hightlight">Featured Project</p>
-              <h3 class="project__title">
-                <a
                   href="https://github.com/Michelle-Lohwt/notion-library-search-engine"
                   target="_blank"
                 >
@@ -276,6 +222,80 @@
               <p class="hightlight">Featured Project</p>
               <h3 class="project__title">
                 <a
+                  href="https://github.com/Michelle-Lohwt/fetal-cardiotocography-analysis"
+                  target="_blank"
+                >
+                  Fetal Cardiotocography Prediction Model
+                </a>
+              </h3>
+              <p class="project__description">
+                Facilitate fetal health status medical diagnosis by comparing
+                prediction model using K-Nearest Neighbours (KNN), Support
+                Vector Machine (SVM), Random Forest and Neural Network.
+              </p>
+              <ul class="project__technologies">
+                <li>Python</li>
+                <li>Numpy</li>
+                <li>Pandas</li>
+                <li>Matplotlib</li>
+                <li>Seaborn</li>
+                <li>Mlxtend</li>
+                <li>Keras</li>
+                <li>Scikit-Learn</li>
+                <li>Tensorflow</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="https://github.com/Michelle-Lohwt/fetal-cardiotocography-analysis"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+                <a
+                  href="https://express.adobe.com/page/OCn3NTYaM8SHb/"
+                  target="_blank"
+                >
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                  <title>Report 1: KNN vs SVM</title>
+                  <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25M9 16.5v.75m3-3v3M15 12v5.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
+                  ></path>
+                  </svg>
+                </a>
+                <a
+                  href="https://express.adobe.com/page/dQsGnkdjU41vL/"
+                  target="_blank"
+                >
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                    <title>Report 2: Random Forest vs Neural Network</title>
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 00-3.375-3.375h-1.5A1.125 1.125 0 0113.5 7.125v-1.5a3.375 3.375 0 00-3.375-3.375H8.25M9 16.5v.75m3-3v3M15 12v5.25m-4.5-15H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 00-9-9z"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/fetal-analysis.jpg" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
                   href="https://github.com/Michelle-Lohwt/qr_code-bar_code-detector"
                   target="_blank"
                 >
@@ -318,6 +338,70 @@
             </div>
             <div class="project__image">
               <img src="assets/images/qr_code.jpg" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="https://github.com/Michelle-Lohwt/12-weeks-data-science/blob/main/Week3/G2M_Presentation.pdf"
+                  target="_blank"
+                >
+                  G2M Insights for Cab Investment Firm
+                </a>
+              </h3>
+              <p class="project__description">
+                Provide investment recommendations to private firms based on analysis of Cab Industry Growth.</a>
+              </p>
+              <ul class="project__technologies">
+                <li>Python</li>
+                <li>Numpy</li>
+                <li>Pandas</li>
+                <li>Seaborn</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="https://github.com/Michelle-Lohwt/12-weeks-data-science/tree/main/Week2"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+                <a
+                  href="https://github.com/Michelle-Lohwt/12-weeks-data-science/blob/main/Week3/G2M_Presentation.pdf"
+                  target="_blank"
+                >
+                  <svg 
+                    xmlns="http://www.w3.org/2000/svg" 
+                    fill="none" 
+                    viewBox="0 0 24 24" 
+                    stroke-width="1.5" 
+                    stroke="currentColor"
+                  >
+                    <title>Presentation</title>
+                    <path 
+                      stroke-linecap="round" stroke-linejoin="round" d="M3.75 3v11.25A2.25 2.25 0 006 16.5h2.25M3.75 3h-1.5m1.5 0h16.5m0 0h1.5m-1.5 0v11.25A2.25 2.25 0 0118 16.5h-2.25m-7.5 0h7.5m-7.5 0l-1 3m8.5-3l1 3m0 0l.5 1.5m-.5-1.5h-9.5m0 0l-.5 1.5M9 11.25v1.5M12 9v3.75m3-6v6"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/G2M.png" alt="" />
             </div>
           </div>
           <div class="work__card">
