feat(update): Add new projects and descriptions

--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
         <h2 class="home__username">Michelle Loh.</h2>
         <h3 class="home__subtitle">I build things with AI and Web Dev.</h3>
         <p class="home__description">
-          Life is a never ending learning journey with infinite possibilities. I
-          love explore interest in different areas, now mainly focusing on
-          <span class="hightlight underline">Artificial Intelligence</span>,
-          specifically Reinforcement Learning and Natural Language Processing.
-          My goal by 2025 is to be a
-          <span class="hightlight underline">Machine Learning Engineer</span>
-          and build open-source projects.
+          Life is a never ending journey with infinite possibilities. <br/>
+          I love explore different areas, currently focusing on
+          <span class="hightlight underline">Natural Language Processing</span>,
+          <span class="hightlight underline">Blockchain</span> and 
+          <span class="hightlight underline">Anti-Money Laundering</span>.<br/>
+          My goal by 2026 is to build a
+          <span class="hightlight underline">Anti-Money Laundering</span> open-source project.
         </p>
         <div class="home__cta">
           <a class="cta__link" href="#contact">Contact me</a>
@@ -86,17 +86,21 @@
                 fascinated when I try my first programming during my early-20s
                 with C++. After that, I have been involving myself in different
                 areas of tech including
-                <span class="hightlight underline">Data Science</span>,
+                <span class="hightlight underline">Natural Language Processing</span>,
                 <span class="hightlight underline">Web Development</span>,
                 <span class="hightlight underline"
-                  >Artificial Intelligence</span
+                  >Blockchain</span
                 >
                 and so on.
               </p>
               <p>
                 Fast-forward to today, I am building my own portfolio with a few
-                side projects. I am looking for an
-                <span class="hightlight underline">AI/ ML related internship</span> starting from <span class="hightlight underline">March 2023</span>. 
+                side projects. I am looking to work in 
+                <span class="hightlight underline">FinTech</span> area, it could be 
+                <span class="hightlight underline">AI Engineer</span>, 
+                <span class="hightlight underline">Blockchain Devloper</span>, 
+                <span class="hightlight underline">Quantitative Researcher</span>, 
+                . 
                 Please contact me if you find me suitable for related position.
               </p>
               <p>
@@ -104,15 +108,14 @@
               </p>
             </div>
             <ul class="about__technologies">
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>Python</li>
-              <li>MySQL</li>
-              <li>Scikit-Learn</li>
-              <li>Tensorflow</li>
-              <li>Microsoft Azure</li>
-              <li>Tox</li>
-              <li>Pytest</li>
+              <li>Django, React, NextJS</li>
+              <li>ZenML, MLFlow, Tensorflow</li>
+              <li>Nginx, Gunicorn</li>
+              <li>PostgresSQL, SQLite, Snowflake</li>
+              <li>Tox, Pytest, Grafana, Prometheus, Locust</li>
+              <li>Microsoft Azure, Gitlab</li>
+              <li>Solidity</li>
+              <li>Docker, Kubernetes</li>
             </ul>
           </div>
           <div class="about__image">
@@ -126,6 +129,84 @@
           Where I've Worked
         </h2>
         <div class="experience__container">
+          <div class="experience__card">
+            <h3 class="experience__role">
+              <span>CS Guru</span>
+              @
+              <span
+                ><a
+                  class="experience__company underline"
+                  href="https://www.telebort.com/"
+                  target="_blank"
+                  >Telebort</a
+                ></span
+              >
+            </h3>
+            <p class="experience__date">Nov 2023 - Feb 2024</p>
+            <ul class="experience__about">
+              <li>Conducted coding classes in HTML, CSS, JavaScript, Python, and Svelte for 260+ youth aged 8 to 16.</li>
+              <li>Developed and implemented curriculum to enhance students' problem-solving and web
+                development skills in a collaborative and engaging learning environment.
+              </li>
+            </ul>
+            <ul class="project__technologies">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+              <li>Python</li>
+              <li>Svelte</li>
+              <li>Data Analysis</li>
+              <li>Web Development</li>
+              <li>Educating</li>
+            </ul>
+          </div>
+          <div class="experience__card">
+            <h3 class="experience__role">
+              <span>Innovation Apprentice</span>
+              @
+              <span
+                ><a
+                  class="experience__company underline"
+                  href="https://kpmg.com/my/en/home.html"
+                  target="_blank"
+                  >KPMG Malaysia</a
+                ></span
+              >
+            </h3>
+            <p class="experience__date">March 2023 - Sept 2023</p>
+            <ul class="experience__about">
+              <li>Led the transformation of 1 sales forecasting dashboard from Streamlit into a
+                user-authenticated Django web application within 2 months, involving project timeline
+                planning, system architecture planning, entity relationship diagram planning, user interface and
+                API communication with team leader.
+              </li>
+              <li>Conducted 3 business use cases analysis for implementing machine learning and blockchain
+                technology in Malaysian Fast-Moving Consumer Goods (FMCG), marketing, and talent
+                management sectors
+              </li>
+              <li> Explored the viability of incorporating blockchain technology into the food supply chain</li>
+            </ul>
+            <ul class="project__technologies">
+              <li>Project Management</li>
+              <li>System Architecture</li>
+              <li>Entity Relationship Diagram</li>
+              <li>Machine Learning</li>
+              <li>Blockchain</li>
+              <li>Web Development</li>
+              <li>Business Analysis</li>
+              <li>VM Ware</li>
+              <li>WSL2</li>
+              <li>Ethereum</li>
+              <li>Solidity</li>
+              <li>Hyperledger Fabric</li>
+              <li>Django</li>
+              <li>React</li>
+              <li>MaterialUI</li>
+              <li>PostgresSQL</li>
+              <li>Postman</li>
+              <li>Figma</li>
+            </ul>
+          </div>
           <div class="experience__card">
             <h3 class="experience__role">
               <span>Elite Intern</span>
@@ -167,6 +248,157 @@
           Some Things I've Built
         </h2>
         <div class="work__cards">
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="https://github.com/Michelle-Lohwt/financial_sentiment_analysis_pipeline"
+                  target="_blank"
+                >
+                  Financial Sentiment Analysis Pipeline
+                </a>
+              </h3>
+              <p class="project__description">
+                Implemented machine learning training pipelines and deployment pipelines</a>
+              </p>
+              <ul class="project__technologies">
+                <li>ZenML</li>
+                <li>MLFlow</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="https://github.com/Michelle-Lohwt/financial_sentiment_analysis_pipeline"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/financial_sa_pipeline.png" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="http://github.com/Michelle-Lohwt/Olympics2024-Dashboard"
+                  target="_blank"
+                >
+                  Olympics Paris 2024 Dashboard
+                </a>
+              </h3>
+              <p class="project__description">
+                Exposed 5 APIs endpoints for visualization of Olympics Paris 2024 data
+              </p>
+              <ul class="project__technologies">
+                <li>Django</li>
+                <li>React</li>
+                <li>Gitlab</li>
+                <li>Docker</li>
+                <li>Nginx</li>
+                <li>Gunicorn</li>
+                <li>Grafana</li>
+                <li>Prometheus</li>
+                <li>Locust</li>
+                <li>Snowflake</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="http://github.com/Michelle-Lohwt/Olympics2024-Dashboard"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/paris_olympics.png" alt="" />
+            </div>
+          </div>
+          <div class="work__card">
+            <div class="project__container">
+              <p class="hightlight">Featured Project</p>
+              <h3 class="project__title">
+                <a
+                  href="http://github.com/Michelle-Lohwt/diversity-hire"
+                  target="_blank"
+                >
+                  Automated Talent Pool Filtration
+                </a>
+              </h3>
+              <p class="project__description">
+                Developed a web application using Natural Language Processing and social media analysis to 
+                match keywords with similar semantic meaning to enhance candidates automation filtering
+                process
+              </p>
+              <ul class="project__technologies">
+                <li>Django</li>
+                <li>MySQL</li>
+                <li>Tailwind</li>
+                <li>Figma</li>
+                <li>Word2Vec</li>
+                <li>Selenium</li>
+                <li>Natural Language Processing</li>
+                <li>Sentiment Analysis</li>
+              </ul>
+              <div class="project__links">
+                <a
+                  href="http://github.com/Michelle-Lohwt/diversity-hire"
+                  target="_blank"
+                >
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    role="img"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    stroke="currentColor"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  >
+                    <title>GitHub</title>
+                    <path
+                      d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"
+                    ></path>
+                  </svg>
+                </a>
+              </div>
+            </div>
+            <div class="project__image">
+              <img src="assets/images/diversity_hire.png" alt="" />
+            </div>
+          </div>
           <div class="work__card">
             <div class="project__container">
               <p class="hightlight">Featured Project</p>
